Modification générale du design, avec les nouveaux modules ajoutés

--- a/ZumbaSoft/Fenetres_Produit/AccueilProduits.resx
+++ b/ZumbaSoft/Fenetres_Produit/AccueilProduits.resx
@@ -58,70 +58,176 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing.Common" name="System.Drawing.Common, Version=4.0.2.2, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" />
+  <data name="buttonAjouterProduit.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACUAAAAlCAYAAADFniADAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAABS5JREFUWEft1l1MU2cYB/ASCLYMP2KmKENaStmAUnAx3rldzOEmxGnmXDBi5ozO
+        pHjn4oWJBqGyGI3OLDNTEajQ0pYPlRYYmiVuyWYmTpN93HCzRdeelnKG4jBMK8/+5/Tt4dCeQi145z/5
+        39Hz/vI8b3tQvczLIGXX+ZSya3x62bV/1GUDvEbst7ymNNJ+XmPqH9GY+qSqTZ5gWpF7mD1hnrP6+qga
+        oGpA7qBPgSFAwu0PFyACRGpJ78ijEk/QZvQEi8rcI+xJ8xhAzCiHTmEYSAETrmeEAAoVe4LWYncwjT1q
+        frJ6gK8BZiLB6chBYgEaM7qDGva4uQUYNSBmIManQWSIaEiJhz9c2scvM/YEDwIjgKi4R2wGe2zyWd3P
+        q8r6RRAXASUyFYCyhM+XXOGXMww6LHTuKCDM6KjSdCRMFAgrIkzIAlBW8dXgEQFTdFVq8igA0hkoLkRC
+        MIhsReJUZBAqujJMheEmh4qAsKZhCSMHRU9lGkhc0TQQw1Dh5YDQ5FDAmAERQdMwyU4njEkOVdobVJn6
+        ggJoGiR6MgmuSYK8IbRbauIogNSm3qC5pDc4Gg8jguJh0Jkwr3dJTRzFQFxcjASKvTNKa5JNhmH8kSaG
+        AqYGHZ/vVU1NB5hOPxV0+p+iM/+il/TyamDMeFlOvEAIFXRI/aXA5V/Ajo+NsY9PMXpGdgDCRTDPu6ao
+        CzyFQUWMDGTo8HMGF1eNpjBCbABJR2/OOh0goqcjYmSgWaZDgEwYnFyNoSOgZscrBxg1IA/nBglPRQ4x
+        dHACAvWRwemlfIf3MUD72bEzB5B0dDBmTQlhoqYSAQGSb/uL8i7dJm1zH61qdE5mXzh7Y+lXm7cuObNp
+        7cJTmzJVtduYQCFFPYEUYPYAMhozHSBmuzPRazI4/ia99TfKbWqi7Iuf04oLu2nZuarJV89+GALq4ZIz
+        HwwtPl3pWnyych0jKOfNHl9a8dXAYWCeJDsdofkA5TX9Qauaj1K2dQetbN5OWY0f07Lz2wgoAoqAosWn
+        KicXnawIZR5/f5+qtpYpFLLG7UsrvBKoA+LB80DwbRLvTj7ujb7lV8q11lNO287ZUAQUvXL8vUDGFxuq
+        Mho2pDJGbABLLewOHACGnwKF1xQPEwb5SN/2J2mtLZTbvisGtcVdS2fudCuhKKOhfFBt2fAaIyjHeNmv
+        BuYgOq50Z6JB+EZhbT7SWXGpbYco1xGLqv/ZRqHJZ8qoY+UhjWX9XnZ8/GRjlQVd3DEAxuNCInVwpG/3
+        kq6ln7SOGkWU5ZaNhMRBkaZ+/QA7euaIsA7uYIGL4+NhhAnphdruYXWdz7TOPZMR1EcDFrLctpNl0E7f
+        3b8roup+ukRHf7TSoe8baempTXKUnx07e/K6ODUwB9AHEoaBRIzQdh/ltd17nNt68YbW9enTCOrr393i
+        ypTy6L/HtPzLLXLUI3ZkYsHEUvVOXx0gT6ZBhNrFTuhs3v26zt1bgRpLan117wyx4xKPsEp9O3cEmFE5
+        SGf3cahZ+Bug1gI1lOSd+kY86Hmz8hIHmHdPnt17F5BxdBDdobNz4stV79qdCZQTqMlo1JGbVnFlcVBj
+        mvryt8VDkonecT9FZ/cuAEaDpmvbfdK/H2vOfabSunatAyoUjVp5oYpyzlcpoxrKrRrLu5nsMS8mOY5P
+        9gEVkKNm+EX/ASgT++gLDN5lOa07q4C6BVQoDurhwhMV1ozjG0tnfPfNZ7Jbq1NzWqqzVzRv3wvUAFB+
+        oP4Fagioc4tOV7yVeWKjbGUq1f/c9vRm0BIMVQAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="buttonModifierProduit.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACUAAAAlCAYAAADFniADAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAABjtJREFUWEft1nlM02cYB/ASCbYcAuWaLpN7g3K5LPOPZVuWZf9sf1JUFDwQESxk
+        S3QjWZxHPBPAzWE2BRkeo6VAuVvK4TmnU4lDk3lhpvOgv5byA4WBRJjPnvft21JKC7Xifz7JN+EP+L2f
+        PM97IHhdrwsrqYN3S2rnPZLa+4VJbbyIppUXJZqj5UUJ2j5RQoslwgS10T22uZd9YZZrUceAEEHpCPkT
+        M4YYQIgpWlMQBAixJF7TNxSvNsrj1MbYpOY+9qVZLITIMBxmAsNAdjCmqPsAQeMStfGYpNnozj41O7Wo
+        jc9FzKiT3bEG0SBoMK7ZKGKfe7lCjBAhMkQMT4JYIWwh8Wp+S2ILHxTXZMxHDAGBpInGk33W9Vqk5QVJ
+        WgrizCBnuoKgEPL38Q18MMNgekleHoUIGWbAXncsGBsQjgiwQ7sQFCJpNG4lmNhGS1xHIcCDgRxCLAgG
+        sRoR7YoVBGIbeiHGFNdQZhCOqdeCsQbZdmUSiI5oEohhIKbeQOIaCjEyhFDQJIyr3TFhXEMlaoyChBYj
+        AU2C2HbGyTFZIO+Q1FniPApBwgSNURavMQ44wlCQIwxmOszbtZY4j2IgziHGApq6Z+yNyaozDKM3xzkU
+        YnIxw7M9qonuIEalh2iVfgwz/Y0er+GFiJHhYzn6CiEQXWPJlehq/Vy2/NSKa+Hd4tR9aQjhzJgXHZPN
+        Bp7AYCjGChRVo+eiqrl0jBsjTC2EeGD+mLE7iLDtDsVYgWboDiBkNKqKy42qMQjZ8vYLMUKEPHk5iKkr
+        1pCoGo4gMDqIquqBSGXPCILy2LLTF0I8MJ1TxuQUxqYrZhBCIuX3IbTsNiwovgZvFF15HrTr4hlRdpPU
+        a33j+56Zdd6CJdVMYKdimwxuiFmHkIEp3UHETHvGdkxRykcQVn4bgvZ2gnf+WRB9dQKEstbnohzNOKKe
+        eGXVd3tlqqq9MpUfMoL9erdJ5y5pNGxBzDNXu0MSiaDwX27AvM2/g0feSZib2wHCDa2AIPDMbgIEgVdm
+        LXivrX7uk1E5Pm91RbZg+3amsFPvNevcYxoMOxDx+EUgeJro3onEfRP2yy0KEuadgNBvTkDClpMg+bYd
+        xLJGCvI2gcAnQwEIAt9Vxwx+K8tT/dLL5jDG1ELYnJg6wybE8BMg05gcYUwgHURU3IPAPZdph7xytbDh
+        yGW4dMcIp/7SwSc727BDKgqat6YCxKuPgO/Ko+CXXg7+Kw53+i4ve5MR7FdcvV6ImHzMsL09YwvCE4Vj
+        08FbJTfpHqIjw3HlHe2E4dEx6Bt8CtJ9J8E7Qwk+axTw2bYGUJy9AcHpBwkI/JeXjPsv+zmLLe+4FuAo
+        o2u53QgYdggxR8lBRGUPzP+hC0Rf4qbGPbRwYwu0Xn0E1x/0Q2nHDfhijxZBchzZr7C0QAP84AjkFGtB
+        nHoQ8xMELDvQxpaeviishsuPruZ4RxjSoQgS+QMIKej8j50yWLy1De5wjyGv7ByIMyogOJOA6B6CWNlx
+        OH/9IWgudYN4yY8QsLQYApfs17NlZ67wWk6ImE2YxxYMA1EMSaUOwisejATsuHAGQWPklH2wrRX+6R2E
+        9P3t4IMYM4jsociscjhz7T6c7roLAdJ9BARB0n1DbEnnCjs2J6JKtwMhzyZBSBQ0o2HynjyvnGYpggbJ
+        KZN83QgXbnGgOo/dIJuagfxXlMLn31XDPW4AdlechkBEIQiCpUXdbDnni4wyopLbipgBa1CYQsdhZOR3
+        yE1tuhhrwW+tEjbLL8IIbvSiuk74dLMKFm9UgHRnPZzqugc37xsgdnWxGQRByYWH6EIvWvOPcwjrWReu
+        6OlCyDCmE5MWpuDo4+qZpfLGY19FL0Y8ZaE5cthbcxH6h57C37oBuHbXAPr+Ibh6Rwcp2yohOLmQgjCD
+        +PPHdBFXKkL50C1M0TMXMSKMR2ilbuLfj/UlAvJ0sJuajkycVgqS7DLYdKgNCpTnYNVeFSxMpRCrFB4L
+        kRZ4s6+8miJPB72pTRcjiJcfAvGyAxCAGzow5XvLyFh+wySwP32FhW+Z38ojqX4rDl8mFyO9h0zH3hr0
+        hHQoKKUwcdq3bzaLvGW+aaULyE1NLkZyDyHo3+Dkou6g5KKSQGnRR8EphVYjEwj+ByZqEmbuDDn9AAAA
+        AElFTkSuQmCC
+</value>
+  </data>
+  <data name="buttonSupprimerProduit.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACUAAAAlCAYAAADFniADAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAABb5JREFUWEft1m1MU1cYB/ASCJbFr5uZ+wCU4oC2FGSKqKCCoEOM6HSy6baYoGbF
+        7EUX4pLBnJlmyz4uLi6bH9zGu7wX8CVLjF+WjL0kJi7GZdnivPe2vff29lZBZgvPnnN6erktLdQK33yS
+        /4c29J5fnuecczE8raeFZb8mp9ivyun2q16j/YqcQXNZzigMZ0zOsI1JGbZRLUabU0zLH/awJyxyFV1T
+        jAg6iJDfMAHEAEJCGQsFQYAQLdYR6b7VKbZZnGK+fVhiT1rEQogDI2BmMQwUAxOKUwIEBQuc4sWCYTGN
+        PWpxquiK3ISYqQS7owfRIMhvGRYz2OOerBBjRIgDERMREB0iGmJ1yi2Fo/KzliGxGTEEBAVDNM+wxyZf
+        RWOywT5GQUIYlEhXELSC/N46ID/HMBgPyZOjEOHAKLG6o2GiQDgiwA59iqAVBYNiK8HkD2pJHoWAdAaK
+        C9EQDKIbEe2KDgL5Ax7ICyU5VBiEY/JoGD0ouisRIDqiCBDDQF6/myQ5FGIcCKGgCEyy3QlhkkMVjogG
+        26hIQBGQ6M4kOCYN8iJJn5bEUQgy2kZEh3VEVOJhKCgeBjMfZlWvlsRRDCTExWiguXsm1ph0nWEYVziJ
+        oRDThJlY7FHNdgcxl1yQe8kVwMx/o1tHZCNiHPiynFpCCOT2aPk1t9u1jC0/tyyjcorFKR1AiBDGPO6Y
+        ojbwLAZDMTqQucclmLuFg5gURphbCEnH/LRgdxAR3R2K0YEW6A4gZMrcJTSZe9xGtnzsQowRIeqTQUJd
+        0UPMPQJBYHgwd3GQ08lNIugYW3b+Qkg6ZnzOmBLCRHUlDCKQtn9gw/lf4LXPR6HpVPfMZx98dV2t3v2K
+        b2v9GrWmfjns28cEMSp/yJ2CmEaEKHO6g4iF9kz0mMyd98D+7U1o/fAC3HjjOPy1+xBItftn1G17gr7q
+        etVXteuOsmVnt1KxYyMjxK7iIT6tYNDdgphHyXaHJAdBORduQe/hVvDXNYC/9lXwb98LCALsEvgqdwGC
+        QNlUN+OtqA16N758FAynmCJGlQzzaXkD7tOI8D0OBE8T3Ts5uG/s39xkoP0RIB8BVYVA3k114C2vBXnD
+        dpDKatzS2uoGaW1VKmPMLYSl5vW5TyBGngWFxhQPEwLxkPP939By8kJEh+6/3ggqAsMg7BAoO/aDFz/L
+        62pAWrsVxJcqx+XVFS8wQuyy9LuMiGnGTMTaM9EgPFE4Nh7Kzo3TPaQHBW//Cf9d/hF8+JmC9r4FgVu3
+        4cEXX4JUWo2gLeBZvTnoKSo/zJaPXytxlLm9whkETMSFhNMpgKmDg4azTrqptT2EHSKgmYlJeNjVB+rR
+        9yF4j4cg7wL13ZMgrqkkIHDby8Ft23iFLT1/UViP0JzbLcjxMKRDJpK2u/B2a+c0O2XaHiIdetjZB9M+
+        FaYVH0yLMvhPfgIidkkDWTeAq6DMxZZduLJ7BSNiTmB8GoaBKIakg4fsH+5Onj1+7jqCAvSU6faQeuQ9
+        mPYqQCqA45TwewLyzIJAyCu9z5ZMrLBjqaYu/jRCHkVASNppprLauGNqDV6M1bv9umOPe+hNHBmHHZIg
+        8MdtmAkEYPLSIIjrt+lBwK9ac4ctl3iRUZo6hFbEKHpQVjsvYBzkb8hNzS5GeuzJKSObOsgL4G/+GCT8
+        brKrH6ZlBdSPzoDLsj4MAj6n5Dxd6HHr+e8EhHGN2e3c7wiZwIxjDmS1C/TlqlbuWa5s3tlFL0a8h8ix
+        J6dMfQc3delWOjKxrIaCpH2H9CA/ZyquoIskU6bOf1Oy2rlliMnApGd28Nq/H1ByxEBeHeSmJhcjvYfI
+        sWenTNtDrENCCARcdvHFe1lFy9ljlqbIq0NaR25qcjHSe0h/yvQdIqAbXGaRjf106Yq8yxDUgDf1zwgK
+        xgGppENcpr0Q2O+WvMi7TC7ZvJLc1ORiJPcQgh6QU4agrznT6vLIkRkM/wPfs01ab6+0UgAAAABJRU5E
+        rkJggg==
+</value>
+  </data>
+  <data name="homeIcon.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAABVhJREFUaEPt
+        l1tMHFUYx/GSGH1gLyzszs7sovX2QEMTiQ8FlqUUYwliaMq2zOzWmJSiPqG+qwtSKHdKTGywmjbRrKU3
+        YJeFXWhJY+LtnZhW0wBFYqIPNhobL+X4nTNnlrkc2C1Qhjb8k3+2s3SH32/2zHeGrO08qOGl8QAvji/w
+        YmKBDybq6Nv3RwRpogkE7kARL03gLgnSeJj+eCsHPSQExztlcKVEgNQdHB/ICocfpv95a+WZqvhjABzR
+        wmsFiISYuCgEvn6cfmxrxCvFbIIUv2qENwoQCSnxjVucdtCPmxtOGssH+BkowGnhubrziDtwgUDrBKDJ
+        GfxZehpz4jkc2wngNzG8XsC1P4KspS0ou7gFOWsjKfhlAdJFd2jiBXq6zQ0vxisA+ncFXi3grDmDrCXN
+        yOprQxZo9u4wynvlNEsA9w9XMFFFT7s5EcRYSJDG/lbDywJxlFs1iCzFHyBrWTuylXchq78bJI7DN9GM
+        HC9/TAR1AtDkv+5QsoGe/t4GwJsEcewOvGrhxTHkeGkAWUrCAH8c4LtJrf4eUouvA8RakH1vP+JEvUQS
+        RmxyyR1K3MO9IjD0CEB/BPCIVC1QH0U5FQALy8amglcLkJZ1guCHyLanG3H1Y3oBuaHkqazy6Ufpb92Y
+        4BnvEeNDKXiVAH9wGNn87eSGtfk7NPAGgZREK/mWuIOjRgHSxLC7MfoE/fXrixCYsPNi7CsNPBVww5i0
+        +loAHq6qv9MAzxQgEl2yROkx5IIxaxTAnfzWFYjnUoy1Jf/w6FNww/4A1cJDXfu/AABY777WFeFxmQK4
+        WKK0HWWXtKC82rMsAVhOkz8JUvJZinN3EcSRQo8YW5DhtQLOms9gvcOk8R1bFR6XCa+qxQcSu5tRbs0Z
+        owCUC07+wkmJIoqVWeDRoBLgb0EpvCIQgzF5EqbJ+zJ8OYbv0gDry4Jebi95JWMWJHL2nVQtp5QA7p+u
+        0GQ1xVs9Xin6GoD/g+HVAnx9DDkq+2Ht4hnfBnAK/HoFFIkOsmvbK08gDm92WgHc/zhpqpFisuMVY297
+        xOiSAq8I8IeGkX1PBywbPOPlDUpbNjyuEVpdRYDWBxOqGI/ZHnmv0ApAp5a40FQTxTVGEKOXQSAFj8sH
+        LiC7vw1uWDzjWfBsAcfr55Br4BpynbiGcuDfGQngKhOqrANxh6J6AdxJimuMOxD1eqToXAr+wBAdk3jG
+        4w2KBY+rgz9yEXGDc4j7ZF7u4DzKOToMgBkI4BIJeI6CMeusu5QScAWnfnZKUzsoLjtecbTAI8XmXK+e
+        lm/WtPC4KvgGDC9DO94aRY434Soqxw2XADADAdwyuC9K8TNUK4zZCBaYdYlXCihm+liK34OrjzcoDK++
+        YVlVw8OVB9jcN0bIexjUcRSuIpXIaRwh76UV8PeRVyIBE4piZR55g8KPBhg+vQALXhFYWYIFrhQLUAkY
+        sxQr89jK1fCrC6wErxZgS7DAlSoCsgTFyjxaeKNA9Y+3Ue0i2pBWX79NoVcS6Nt4ARbIerrpAtXX/2KC
+        rKWmfAO4Rcnf0ItXb62rRclfKbAJArvOzzKh7qa7zs1SYBMECj6d0cDkf75ImukxLj6HaQLP932ngVEe
+        HTI9xn2u93sKbILA081XNDDpgPXHuDvC0xTYBIH8d6MamHTA+mNc7zsxCmyCAN8Q0cDg9f2kbs2vdozL
+        HzlLgU0QcAZOaWDW0rw6+PvaLAH73h5U+OUNJlgmLYzcQLaKfgpsgsBylx/e9FU/zBnLAle6LXD/C9zc
+        QgLzFCvz2PzdVVoJFrhSNjwuG1wpC1zpMry9vHcfxdrOdrbzYCUr63+TnFrtVLNeRAAAAABJRU5ErkJg
+        gg==
+</value>
+  </data>
   <data name="dbERROR.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAABidJREFUaEPN
-        WllsG0UYNjcIkECIQ4C4QYVyB1rinbX8ABH27rotyBWoUCEkoBIPFYj7agRPgHiqEAjIE0cfEBII0ZZL
-        gAStBOUIhXJUbShJ1uukhKMpKbQlfN/432i93t3YiWP7kz5595//2p3xzD9jp2aDya6uQ0q2uaBkq+We
-        rZ7A5xpwI/gjuAMcA/cKeU0Z26izpuSYj7uOupk+6EvctgblgnmxZ5kPuZZ6D8mMg5NN4rhnm+96tvGg
-        l89cJOGai9GCcbRrGytKlvoiIoE5ovk5YzK2pDFzTGazB+PN3w7HXm2gVtHciRd4//fF+YdKWo1hxM6c
-        C0ebax23jZtHCt3nSHr1wc1nMjD8LeSoA2juZG6SZjLKufTZJUf9Ee2o/cTs+LvnZM6UdOOB78RrUQ46
-        iZjdXpF049HJvRHgmKQbD3ZdhGGncfoHcW31aoRhR9FzjJcl3XiULXVWh/fKWGlx9gxJNxmofxQMRkMO
-        OoGjwwXTkDSTUS4sPFF/YhrGMPsmwllbiFHyNUdLMMdEwGh7aZF5Aa91ieIYd0DWxhJFecxhslg8SOfn
-        GPNLljHA60SI8Th6427feKSYPUpqLpbf4UBzxY2ubd7G2MyBLxUPcQ/ku9lOWSICjsh+FGzFyd7UgdKc
-        Ym+hVLgP6806tO8K6c+G9LUWvu/1RwTB2HiApYj3bVBfmuMRVA7wJwYYtLtPETUNPfTyxhUot5dBp7cy
-        dZsbcL2F3Y/PMSTwryavK7It1JFpHjbGMvqgL3GrMZTLnsoXBr2foVeTk6jFI8oowP3gx5jVHsZcflU4
-        +GxAX2U73Y3EH0EPfCKxonLQFLN4QKmRXd8EuAns4/jFzvEGTt16C5Azj99hqWMR8QCS15SxjTqeo26U
-        Md8nPugrKkYUd0m68YDS2yGjDqT5lqQbD+7JodzI22k1//as9IWSbjI8yyjAoJkHC83iOBZGR9JMBscz
-        P4fy6UthuD3kqJ3cVrbVJcEcEwGD1weL3Ufwmht+vIGVbS4iub70+jltzeUOq29jVTHeNFzIXCai1NCS
-        Bce5jnkX5P3S3gr2MyZjSxooZs3LIf+S7SKKR8DRXswOqzFVniZNGnxALGyPov0DUJcLTeJurCHvcx3h
-        sJZwGm4+fToqjGehs8/Xl6Z4+IpTxKrMVbhcMK7xay8feujl1ULoLdfHn3q/X+fKTl3Y0JY+wudWumpw
-        0j1yhsAj16q8RC0eYYMQyygpXmRZES5XmgGWJa5l3sQYiDUSil1FMYkHlBoZLoPgevAZBF/BaZulC49r
-        uJKT4jbl37NN60CXNrTlma/4iopRQ04+4jYeGAasaiMddApdy3hT0o0HxmQXlP8JG3cQ99S9snMPAoN2
-        lyk8d/6uSoZJg0NS0qwPJSd9JYx/rXLUUhp5VMe5qXvMeCzzJb3pAaM+fyr0enqOxBT5GGTN3AnWQeND
-        nQyAoc4flCh/kveclvFlf0E3JoFGnqU+da3M+SJKeUvSJ/A3CrRhDQgHbTr3cwWX0CnWV5BxIZwoW+pq
-        rGmfUU+a4yHOSHzhjadG8tmTpEkDixl/M+wFPwKb/j2KOkWEnJuvKj1pikfYANyD7n0JU54ZPIQgWMBx
-        3GL43YLuDv4Y+gP4C1hZ2SuzIH8M3QaiXpOV3VaruKvE550gY034JZFfEfB6tGCcjLaqbQXliQgqh4lk
-        h3TN4xhLwz01G3AoSwz9PSD8mHLL+1W+LCiPBZQa2VDxra8tWebTPETDgzoceizyuIoPLM4eQ5/sSd7z
-        4XlaqHUs4zror2Rvi69RX58Q2VTCeuKx1bDIpz+Nh1Jb9ux8KElBw5fLrQZ67laRlway2cNFHI327NnN
-        reHq12+TWw32LGYtfR7tOeoBEcej5Xt2VBISegrBL3sQnILF7k8uCyKOR+v27OYGvPbp9+ABwOYd2mKo
-        PS+iZLRiz87DOglXN1ynex5sudna19DfPeZsz+6oNyREDeKGlg/0ynPiZ72IGkPT9uxIciivzhO3NZju
-        QfhjD/z8RV9uXl0r4pmh7j27rf7T15Wf82T/ba4WNzMG/6VEX5zJRNQ6oH77qvIgTaUn7lsH1mzSW1EJ
-        zYSe65jX/w8ktALoJV9bkAAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAABhRJREFUaEPt
+        mOlPFVcYh4mJ/VT/CFOT1tiNQqxLtGqoBSWCyNUIaTWt0lRj06A2Nq3GpFFLwYKCgOzKgAhuXT71Y03/
+        gyLChQvcBbgrd3GFm7w977nnTA9zz2xA5Qtv8gvDMJnzPId3Zs5MxnIt13It13ItenX0/rH7Ru/vXhJQ
+        c/s36GBp7/mV5QG03WLpvg+tNPegtesetHTdTUW5C83KHWjuvANNnX2p3OyD6zd7U7lxGxoxHT00DZj2
+        WzT17d1Q39YN19q6PfWtSh7DMy8C7JkD32sCf8sEngoYwDMBGTwVaO3CuBmeeXHwly9f0szMzKiZnZ1N
+        C/8bP/7Fixc0z58/p3n27Jmap0+f0jx58gQSiQTE43GIxWIQjUZhenoaIpEIhMNhmlAoBMFgkArUtSrA
+        8MyLCyCEkYS4jx9nJCDCmwlw+JSAAnUt8xTAASYmJmgmJydpcGARXhTg8IslEAgE6OzbFsB+Rwifzwf+
+        QAj8wXAqZBsltOBaAS38ggQIfF1Lp3UBfsEiiNfr/Q+eBaX0wEV42exzARHeXKATaucjgABmAiK4Hryd
+        2ZcJIHxts10BcqtECI/HAxln/oFVn/fR4DZKacGtwIuzb7V9qACBr22+aUcgda+3KiCCm8HLZt9IwO/3
+        U/irdgT4wwoBuMDrR+7R4Dbu00LzWIXXm32ZAMJfbbIrQJ6wCOF2uym0GJmACG4EL2sdo/ahAgT+atMN
+        OwKpJQIOjvf/rOp+FT6bbOM+LbAYK/BWZ39qaorCX7EjwNc4CIADjo2NqdfA+Pg4BTGC5rEKbzT7qsB1
+        2wL3VRCEFgVESFk4uBm8tnVks49B+CvXO+wIpFaXHMKqgAiOsQova525Ah32BPjSGAeXCWhBtRHB7cJr
+        Z58L1DS22xfAwRFEew3oARuBm8HLWoenptG2QOrFhIOMjo6qAiijB8zDwecDLxdotynA3qo4hMvlUgVQ
+        RgusB60Fnw88F6huaLMuwF8JOcTIyIgqgDIirAwaYwSuhUdIXJ7guYeGhmBgYAAePXoEg4ODdF9VXTP8
+        Ut9qU4C8z3KI4eFhVQBltLAiMA8HN4PHp/pgfz84OxTwln8HAcdhCG0vgNC2fJjaUwLjx06CcvwkXKqo
+        sSHAXsY5gNPpVAVQRgvLI4PWA8d2wXM5lR4I7j8M0R17YJpAR7buhvDmPAhv3Amh9TkQzN4BgcyPYGhT
+        Lvjf3lzEEI2Lf0ngAKIAbougYkRojBZchB96/BjcFyohtrMIojmFpgL+d7egAEy+tbGS/CtWMFR5UYHO
+        OyoA9iUXwG0tKA8/nkcLzuGxDd0XqyCeW2xbYGrtBph8c30FQ5UX/wjFB8eLiQvgthZUjAyag2Nwdevs
+        6oH4LsdCBGDijaxChpteBN4jfoS6fK1FFaiqbTL6gsY/QqlfEvj7LL5V4aKs8nIdeB2H0gQSX5VDtKAk
+        TSCcsxcipWXpAmuyXf3r1r3GkOdWk9KXR+A9/AvaZXIbEwV0v6C1aeEVFR7fqqob2uH2t2chkX9gjkDi
+        2CmA2VlIusZguqBUFYh8UgzJYRfAzAyEDx7VCoB39fsOhmxeXID9qluOkkOgl737S+HPggNpArF9n1F4
+        LCqRfxCmd+0n8KN036zTBcGt+WkCvtUfKGxY87IqcPTEadDLoS9PgGtvaZoAtlCs6FNIjqSAkx4fJEfH
+        U9vkZ4i0kaSFUOAxG9a8rAqUn70Iejl26geIkBaRCeBFHC0sheSYm4JjJd0+CJM2kl7EVCAzwYY1L61A
+        +blLf8sgjWJfwAvhXIeRQIzhmFeagATQLMdPn4NR0u/mLeSd20IfF+kJDDAc81oMgRNnzsPDkiOLdhGT
+        u1AnwzEvAv9w1Rd9f7FfSQtdeCiDNMo33/8I9Ue+ThOY/200s5jhvLqCsrKVRMCpbaF5PMhGdB9k/3cl
+        dh8okl3EdpYSvjXZBex0S1PxvOLKBQj8xE6zdAXnz6+I5+772a6Af+2GCnInMV5Ov8qK79xXSAScpgLv
+        bXFOvbNpadtGryCrbCURcBABhQgMEIEEEUiEPswZCGZtVwKZ24ohK2slO1yojIx/ATvosZrOu98NAAAA
+        AElFTkSuQmCC
 </value>
   </data>
   <data name="dbOK.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAABqpJREFUaEPN
-        WWtsFFUUXt/vd3ybCIrxsTs7rVWR+Ih/NGqiP1QUo4L+EImmdGbags9kIz/8Af7ykRglMVF8QGJijCga
-        UzUEaGdmgVYeipSHMaIgGFsQKaR+39kzdTqdGbqwdPZLvuzsvefce+7MufecM5OrBk3e9ONM176h6DpT
-        Tc+eU/TtD4uevRxcD24Bd4IDSl6zjX3LKWt4zsumaz3GMTiWDjs2KPgtRRjxvOlZX8GgfnCwRuw3PHtJ
-        0XOew6+h09UWVy6ddRru+Iyia7sxBhwRGr7TxTk5t5px6Lito3Ss4dvTMfC26ERjyB1wwdn5NaXj1azq
-        0LBy5hVFz+qJGTgjWj15356g5o0ORrnlVij/OXKwzLmDtqmZ6Sh47ZdD4a/IAPXEXcXOtvFqbjJwanwQ
-        o1xXND3nfTU3GRCs56cRcKeamwwI7Yoo1SNHtZAFEaW6o+Ha76m5yYDQZRCu56eys2GlNU7NTYfptd4M
-        he2RAeqB2xtc6yY1Mx2FFS3nyy+OYaQIq2IGy4or6S1hG1MBhd7Gcus1vGaKYrrOU2jLMkXZRhsmL5x8
-        DG0yu+w82jbxOhWq3I+n0cqFsC2/5ulTNediih6d6EhxORLHJzk3baAtSFPa0L6b/WxLRWggstv07Qdz
-        g6WjtTvHp2W41ixkwl+gvy8ifzjsQ3mwGGwPPEKAuWkD+rvD8tqbjLBwiD+K8SuaL1ExAe9SoWxfZ/jW
-        IyiuSpBbgAUuw+9acBPIYmqfktdsW6sykHVK1OUYwdMPYK6yL5Y5MTc4wiYVS0acUogHMPl3KHxeNMrW
-        pOjkhwNxHd+5EeO/gKfyrcwVb4NQ1ZIBoWqqvn9AD748X/zXtR7m0c0SoLHcfK7R/exZ4paDuaN4zTam
-        4nK8u/YU7kPov6MFG8eKmyOOfWpuMiD0WUSp/uhbn6q5yZCavLq7M9bcU3RnFtTcdMBP74VCLV8s1Ir9
-        2D/3qJkHAfyZPw1dVgMUeyMDZcnefNkxwzamAgqLJi2zT+I1C378bwGzTCL7eEwHNk3Y0HzCaAsrKntI
-        Cxq1KXdV5zPn4Gi00L5a+8eC3citbM6tZsA261q0++zXpmSEBtqPxbyOKHupdgm4QMYR+OrXkJF0oUbc
-        A35jetZLNFinE9AG9L0B7lfZQwqIA6zjcebfEQ2AFddrmcjXnnz9KfU+ojYWugZ6cZF9M8ioj5xNxpyD
-        62kcgy6jwwqYJBbc1tv1HQJfuQ6zS8WSEVWI8A8M/LbpO49G05VaQNISpjuYA3P9Hpl7GFUlGRCqxl1+
-        wd1fYnjWq7i7M+TYZprR2TaekVwiuwJV3Zn8zz4+AcpqiTAPhn/JsULjHoz9Omwy4BrMauOU64n/4gZ+
-        TM9IfJVq+K1NFIwo1jO3IMd7QM0fDmzcyRColzRlHWsUBsP8MvtsIa7Zhj5+axE51CyvxQbKhq6W6yGw
-        NRDMgPsYR9JKBfYhODqQlVON4UK76FrO/MDviqvbTqmc6/bfOvhYcR/u+J1i0CiAAuwu6FSO6MDNdKCl
-        Bd+6WhoALOg8VmsaH6KT1px8Ejp1Kpq82Wfg9JvKa61tqL9VHkRoQGx4Z26+q/0C0VKIy7FE9ewOyDAa
-        DxlQI64bTeUp3y8rn/9Qn9jt/I9rKYt5msUFxL10N/kuEXoJQTAaS9xAdJYo/f/HUEZvRvG4mv0HflbD
-        jfgEfMXw7SdYNkN3Mfown9Wmw6dCgybt+y1Io7TGH+TRHLeQEK1fwTex4oeaPOtCGbFGwI3YwDmGUvUU
-        BAaDu+kh2ix5oLZv5kKqKag2VwKoM1eiNIoeRm2+m2UUZzTXOcQVgmjP2p17EPK3MCWp5GmVzcrjVVVY
-        4JWGvRoCuJkhxxcTB0zfuk+bBdTlGOBeLiTTmj1YiMYytvHGTmObpDZD+3KkC4YWsifzmj1wLR79+P9u
-        qI+fO+TVrenab4nlEYRca6M0SPKXVc2OE0iMUOBgeBztQ7ZgIy9JOtX4GVvkXOsjbcq0Zl8fNZT7BAtA
-        DLN6Jq5oPl2bh0GP359kDNeeos0VsE7WVY5pzc60Q00YAgw9ubE86yL9OwJ8kqq/MTEjzqBmHzBc526d
-        /qCgLHVE13Xu1+Z0cEPhMR+Jmp0HzPfg5/p/gGkHXUanHgFxp8qTCErhedpVHaqo2TkJr0n68VJwEeMP
-        IzuD2riO0okyKFJxtqM/WKB8CeANpGeQlZspLl/ZEyCr1OBjUF1BT07ejGBBSewdtTtlBT4lGgkXWwiD
-        WUQxGMIFrZ+ZT/Htf/zGzuX+AwHyYmZ4/gfxAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAxNJREFUaEPt
+        l9lPE1EYxftvULr3DzPxwQdjjL5oTIhLYogxMRjEtaYoYjC2imjdFRSsG+4LFEG07ktRcIvx5fOcO7ft
+        0LB0hjKdkDnJeZik3Pzuyfku+XyePHlaQmpY/i/bsPKv+Nf+Fv+Gn9K4eUoam79LYMeEBHZ9leDeLxI8
+        +FmChz5KqPODhLreS+j4OwmfeCvhU28k3AOfzkv4DJzJD+hjndM0+C2A3wb4FsDvBvwBgLd/ktARAzyc
+        AnQ3geFMXiLnXkvkPHwRvkS/En2sc/Kv+VNOnvA7CxLYA/iETv2oTlyBI+WzAL9gwEauwL3jEumDr8HX
+        x+twgfW/KuBZGaTeAXimnkbqrEkR/LKGBnC0/6VEb8DZMYnehG+NOX+Bxo0/jM6zNkwefVfwxwB/EvBI
+        XVWFiV+FkXJ0ANAEvg3fGZXo3VGJ0YOjdbjA1kljYNuM2oQOm+AxmKrjTB01KYNr6MEXErsPPxgx/HCk
+        DhfY/k0CrQUJ7tedZ234whCelWHPWRdWhYkT/J6GBnDsUU7ij+En8NOc8xcItACeT2USvcfAqs6zNkye
+        8KwMO47UWRGVOMAVNIDjz4YNPzesj/WlMr1ZuPSsWv2uWqXq8Knka4OBVZ1nbZh8Fsmj56ouTJ2JM+0i
+        9JDJw0PmCwykMn39+tPyd9UK7kP67bo67D3fdw4sO69qU4Y3Uq8AB3Q8V7Y+1jmV0k8hffyDUtXBa6MG
+        Fp1XtWHyhDenXgQfmW59rHNS/2mL6fOtZ/qsDl8bDiw7z9qYk58FfiEXQIXszYB684vdr0yfrw0Hlp2v
+        Ap7Wx1qW7RlIdKalltbHOqemZPdUa6JDauGmrvSkPrb+WrZitcxl/bOayfYMzKZV6zbJXNY/q5lsz4BZ
+        zW3JCVgsuqD/vP4iTAVcNXbPBWopb1Wt9apq9ZVw3apq9ZXwVlVvVa2Q1Rlw3apqdQYWa1V1TIu1qjom
+        162qlTMw37frVlXCmWdgvm+3rKq25ZZV1bZmWjcXYn2sc/JWVbdqpvXUbP0zdwlbm7eqevLkacnI5/sP
+        11zEkO+z0P4AAAAASUVORK5CYII=
 </value>
   </data>
   <data name="$this.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
